--- a/styles.scss
+++ b/styles.scss
@@ -60,6 +60,7 @@ h4 {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 0.5em;
+    line-height: 1em;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -87,6 +88,7 @@ p { margin: 0 0 1em; }
 
 .subtitle {
     font-size: 1em;
+    line-height: 1em;
     text-transform: uppercase;
     letter-spacing: 3.7px;
 }
