--- a/_colors.scss
+++ b/_colors.scss
@@ -10,9 +10,18 @@ $error:                 #cc3300;
 $warn:                  #FFCC00;
 $confirm:               #339900;
 
+
 $black:                 #222222;
 $white:					#FFFFFF;
+$select:                rgb(249, 240, 151, .8);
 
+$black-bg:              #2D2D2D;
+$gray-bg:               #F1F1F1;
+$gray-text:             #898989;
+$gray-subtitle:         #BFBFBF;
+$gray-footer-text:      #A5A5A5;
+$gray-transparant:      rgba(122, 122, 122, .28);
+$hr-bg:                 rgba(204, 204, 204, .3);
 
 
 //brands
